projects/safe-steer/src/app/components/skill-card/skill-card.component.scss
.card-container {
    display: flex;
    flex-direction: column;
    height: 100%;
}

mat-card {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 100%;
    cursor: pointer;
}

mat-card-content {
    width: 70%;
    margin-right: auto;
    z-index: 2;
    margin-bottom: 10px;
}

mat-card-actions button {
    margin-right: 10px;
}

.bg-dreamwave-accent {
    background-color: transparentize(#4de9ee, 0.93);
    border-width: 2px;
    border-color: #4de9ee;
    overflow: hidden;
    transition: background-color 0.2s;

    &:hover {
        background-color: transparentize(#4de9ee, 0.85);

        .inner-image {
            width: 80%;
        }
    }
}

.highlight-accent {
    background: #24243e; /* fallback for old browsers */
    background: -webkit-linear-gradient(0.85turn, #24243e, #302b63, #7b1fa2);
    background: linear-gradient(0.85turn, #24243e, #302b63, #7b1fa2);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-clip: text;
}
  
.highlight {
    background: -webkit-linear-gradient(to right, #4de9ee 55%, #69f0ae);
    background: linear-gradient(to right, #4de9ee 55%, #69f0ae);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-clip: text;
}

button.action {
    background: -webkit-linear-gradient(to right, #4de9ee 55%, #69f0ae);
    background: linear-gradient(to right, #4de9ee 55%, #69f0ae);
    color: #302b63;

    &:hover {
        filter: brightness(1.2);
        color: #7b1fa2;
    }
}

button.delete {
    background: -webkit-linear-gradient(to left, #5a1677 50%, #221f47);
    background: linear-gradient(to left, #5a1677 50%, #221f47);
    color: #4de9ee;

    &:hover {
        filter: brightness(1.2);
        color: #69f0ae;
    }
}

.inner-image {
    position: absolute;
    right: 0;
    padding: 0 12px 8px 0;
    opacity: 0.65;
    z-index: 1;
    width: 70%;
    bottom: 5px;
    transition: width 0.6s ease-in-out;
}

